<resources>
    <string name="app_name">Wibi!</string>
    <string name="lablelCreateAccount">Create your Account</string>
    <string name="button_signup">Sign Up</string>
    <string name="labelLogIn">Log In</string>
    <string name="button_signin">Sign In</string>
    <string name="labelSignIn">SignIn</string>
    <string name="wibi">Wibi!!</string>
    <string name="chat">Chats</string>
    <string name="lblMe">Me</string>
    <string name="lblProfile">Profile</string>
    <string name="lblSignOut">Sign Out</string>
    <string name="lblMesReq">Message Request</string>
    <string name="EnterYourMessage">Enter Your Message</string>
    <string name="lblUpdateProfile">Update Your Profile</string>
    <string name="lblAddress">Address</string>
    <string name="lblHometown">Hometown</string>
    <string name="lblUsedLive">Where i used to live</string>
    <string name="lblbasicInfor">basic information</string>
    <string name="lbldob">Date of Birth</string>
    <string name="lblSex">Sex</string>
    <string name="lblrelationship">Relationship</string>
    <string name="lblEdu">Education</string>
    <string name="lblPrimarySchool">Primary School</string>
    <string name="lblSecond">Secondary School</string>
    <string name="lblHigh">High School</string>
    <string name="lblCollege">College</string>
    <string name="lblUniversity">University</string>
    <string name="lblMessage">Message</string>
    <string name="lblAddFriend">Add Friend</string>
    <string name="lblPlaceLived">Places Lived</string>
    <string name="lblWork">Work</string>
    <string name="lblSeeYourProfile">See Your Profile</string>
    <string name="lblContactInfor">Contact Information</string>
    <string name="lblPhone">Mobile</string>
    <string name="lblMail">Email</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="lblEdiProfile">Edit Your Profile</string>
    <string name="lblSaveYourChange">Save Your Change</string>
    <string name="lblFriend">Friend</string>
    <string-array name="spn_Gender">
        <item>Sex</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblSearch">Search</string>
    <string name="User">User</string>
    <string name="lblFindFriend">Find Friends</string>
    <string name="lblYourQR">Your QR Code</string>
    <string name="lblScan">Scan Your Friend</string>
    <string name="QRCodeFindFriend">Find Friend by QR Code</string>
    <string name="lblScanYourFriend">Scan Your Friend</string>
</resources>