<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start.StartActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wibi"
        android:gravity="center"
       android:textSize="60dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:text="@string/button_signup"
        android:textSize="20dp"
        android:id="@+id/btnSignUp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:text="@string/button_signin"
        android:textSize="20dp"
        android:id="@+id/btnSignIn"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>



</LinearLayout>